--- a/app/partials/posts-list.html
+++ b/app/partials/posts-list.html
@@ -3,7 +3,7 @@
     <div class="span2">
       <!--Sidebar content-->
       Search: <input ng-model="query">
-      <a href="#" ng-click="load()">Refresh</a>
+      <a href="#">Refresh</a>
     </div>
     <div class="span10">
       <!--Body content-->
